--- a/HTML.html
+++ b/HTML.html
@@ -12,11 +12,11 @@
 		Hover over an image below to display here.
 	</div>
 	
-	<img class = "preview" alt = "Styling with a Bandana" src = "images/bacon.jpg" onmouseover = "upDate(this)" onmouseout = "unDo()">
+	<img class = "preview" alt = "Styling with a Bandana" src = "bacon.jpg" onmouseover = "upDate(this)" onmouseout = "unDo()">
 	
-	<img class = "preview" alt = "With My Boy" src = "images/bacon2.JPG" onmouseover = "upDate(this)" onmouseout = "unDo()">
+	<img class = "preview" alt = "With My Boy" src = "bacon2.JPG" onmouseover = "upDate(this)" onmouseout = "unDo()">
 	
-	<img class = "preview" src = "images/bacon3.jpg" alt = "Young Puppy" onmouseover = "upDate(this)" onmouseout = "unDo()">
+	<img class = "preview" src = "bacon3.jpg" alt = "Young Puppy" onmouseover = "upDate(this)" onmouseout = "unDo()">
 
 </body>
 </html>
