--- a/HTML.html
+++ b/HTML.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Photo Gallery</title>
-	<link rel="stylesheet" href="CSS.css">
-	<script src = "JS.js"></script>
+	<link rel="stylesheet" href="style.css">
+	<script src = "js/gallery.js"></script>
 </head>
 <body>
 	
