--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Photo Gallery</title>
 	<link rel="stylesheet" href="style.css">
-	<script src = "js.js"></script>
+	<script src = "js.js">
 </head>
 <body>
 	
