--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Photo Gallery</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="gallery.css">
 	<script src = "js.js">
 </head>
 <body>
